Opened 17 years ago

Closed 16 years ago

Last modified 16 years ago

#1527 closed bug (fixed)

Selecting an area on the desktop leaves ghostlines

Reported by: scottmc Owned by: stippi
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking: #3480
Platform: All

Description

Screenshot attached shows this, similar to the cursor ghosting bug, #1520.

Attachments (2)

selectbox-ghosting.png (52.4 KB ) - added by scottmc 17 years ago.
selection-area-ubuntu7.png (314.1 KB ) - added by scottmc 16 years ago.
screenshot of selection area in gnome (ubuntu7.10)

Download all attachments as: .zip

Change History (19)

by scottmc, 17 years ago

Attachment: selectbox-ghosting.png added

comment:1 by axeld, 17 years ago

Component: - GeneralServers/app_server
Owner: changed from axeld to stippi

comment:2 by jackburton, 17 years ago

Since this only showed up lately, it might be related to wrong handling of fractional coordinates ?

comment:3 by stippi, 17 years ago

Status: newassigned

No, this was there all the time. Weird thing is that it sometimes works. I will figure it out eventually.

comment:4 by scottmc, 17 years ago

Ok, so here's what I've noticed on my PC at least. Click and then drag the selection box down and to the right, I get vertical AND horizontal ghosting lines. Down and left I get only horizontal lines, up and right I get only vertical lines. And finally if I go up and left I get NO ghosting lines at all. I've not sure if this is only the case on my system or if this happens everwhere. This is on a Radeon 9600 mobility. So if it is this way for everyone then it might be related to fractional errors where you are off by .1 when erasing the lines? And it's not seen when subracting from bottom/right but is from the top/left. Anyways some clues to check into it with.

comment:5 by stippi, 17 years ago

This one gives me a headache - I can reproduce it fine... But for example not in the test environment, which is quite weird. But it gets better: I can reproduce it in VMWare (vesa mode), *but* if just keep doing it for long enough, the bug *goes* *away*. Literally. At one time, I could observe that when dragging from left/top towards right/bottom, which produces artifacts at the right/bottom side of the selection box, that it suddenly started to have the artifacts on the right side only. And then finally it was gone completely. Whenever someone argues a bit can only take on two values, 1 and 0, I am just gonna put on a knowing smile...

comment:6 by scottmc, 17 years ago

I was trying this out this morning with hrev22729 I think it was and the horizontal lines weren't there anymore but the vertical ones still were. And after trying it for about a minute the selection box froze on the screen and the icons disappeared. The cursor still worked except I could no longer make new selection boxes. I had to restart the system. Things like this make me glad a reboot in Haiku is only 15 seconds from shutdown till I can use it again ;)

comment:7 by umccullough, 17 years ago

Tested this also on my PIII 600 w/ Radeon 9250 AGP

I also see the vertical lines the *first time* I try it, then they go away. I noticed the mouse movement seemed to get a little smoother at that point as well. Perhaps there is something goofy there with the mouse events?

One thing I noticed that perhaps is due to the slower machine is that the more I drag the box around, the slower my machine gets. The CPU usage starts around 30-40% when I first drag the box out, then it eventually gets to 100% as I keep resizing the box around and gets SUPER SLOW. Performance returns after mouse up and I can start over.

comment:8 by umccullough, 17 years ago

I should add that it takes ~20-30 seconds of dragging the box around before my machine hits 100% cpu, in case that wasn't clear :)

comment:9 by scottmc, 16 years ago

I suspect what we are seeing here is caused by being off grid? That perhaps where the click-drag window was started from isn't exactly on an integer coordinate, but off by some fractional number. Maybe only dragging this click drag box using integers, (or floats without a decimal if you will) would take care of it? That might explain why we only see it happen in certain directions, could be a subtraction error on the undraw part of the code? By by keeping it on an interger(-like) grid you might be able to fix it? Just a thought.

comment:10 by stippi, 16 years ago

Unfortunately, that's not it. The scary part is that if you only keep dragging many times enough, the bug will "go away" by itself.

comment:11 by anevilyak, 16 years ago

I notice this one is 100% reproducible if you switch resolutions also, albeit with the same "cleanup" behavior after dragging the selection rect around enough.

comment:12 by scottmc, 16 years ago

I wonder if putting a "shaded" area in the selection area like is done in gnome might help uncover this issue. I'll attach a screenshot from unbutnu7.10 showing what i mean by "shaded". Is this possible in Haiku?

by scottmc, 16 years ago

Attachment: selection-area-ubuntu7.png added

screenshot of selection area in gnome (ubuntu7.10)

comment:13 by scottmc, 16 years ago

Ignore that posting. Shows what happens when I work in windows for a day... Haiku already shades... I see that by looking at the screenshot i posted of this in the first place.

comment:14 by anevilyak, 16 years ago

Blocking: 3480 added

(In #3480) Never mind, this is in fact a duplicate.

comment:15 by aldeck, 16 years ago

This reminds me a lot of what happened in hrev25930 (#333), i'll have a look, unless someone's already on it :)

comment:16 by aldeck, 16 years ago

Resolution: fixed
Status: assignedclosed

My suspicion was well-founded, fixed in hrev29316

comment:17 by scottmc, 16 years ago

awesome. glad to hear this one is fixed.

Note: See TracTickets for help on using tickets.