* Refactored _SanitizeEvents() a bit to remove small bits of duplicate code. * Round the mouse coordinate to be compatible with BeOS behavior. I know that   in WonderBrush, I had to extract the fractional coords using the be:tablet_x   and y fields. This may actually be a better fix for #1527, now that we know   what caused it.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29317 a95241bf-73f2-0310-859d-f6bbb57e9c96